修改执行测试用例

--- a/TestResult/Report/测试报告.html
+++ b/TestResult/Report/测试报告.html
@@ -7128,37 +7128,26 @@
 </script>
 <script type="text/javascript">
     var resultData = {
-    "testPass": 3,
+    "testPass": 2,
     "testResult": [
         {
-            "className": "create_train",
-            "methodName": "test_01_train_1",
+            "className": "do_vi_task",
+            "methodName": "test_01_add_software_vi_task_1",
             "description": null,
-            "spendTime": "12.8 s",
+            "spendTime": "20.4 s",
             "status": "成功",
             "log": [
                 "不支持的元素定位类型",
+                "mingcheng ('初学者', '任务带软件2023-06-2114:22:15')",
                 "<br></br>",
                 ""
             ]
         },
         {
-            "className": "create_train",
-            "methodName": "test_02_train_with_software_1",
+            "className": "do_vi_task",
+            "methodName": "test_02_do_vi_task_1",
             "description": null,
-            "spendTime": "14.6 s",
-            "status": "成功",
-            "log": [
-                "不支持的元素定位类型",
-                "<br></br>",
-                ""
-            ]
-        },
-        {
-            "className": "create_train",
-            "methodName": "test_delete_train_1",
-            "description": null,
-            "spendTime": "18.0 s",
+            "spendTime": "22.5 s",
             "status": "成功",
             "log": [
                 "<br></br>",
@@ -7167,10 +7156,10 @@
         }
     ],
     "testName": "测试报告",
-    "testAll": 3,
+    "testAll": 2,
     "testFail": 0,
-    "beginTime": "2023-06-16 11:50:10",
-    "totalTime": "53s",
+    "beginTime": "2023-06-21 14:22:09",
+    "totalTime": "48s",
     "testSkip": 0,
     "testError": 0
 };
